--- a/finite.tex
+++ b/finite.tex
@@ -181,24 +181,32 @@ Quillen's theorem, at last
 
 -----
 
-Yesterday, we developed a rich target for $T(J)$--homology: sheaves over an algebro-geometric object $\M_{T(J)}$.  Furthermore, Quillen's theorem gave an identification $\M_{T(J)} \simeq \moduli{fg}$.  Our initial goal for today is to outline a program by which we can leverage this to study $T(J)$.  Abstractly, one can hope to study any sheaf, including $\M_{T(J)}(X)$, by analyzing its stalks.  The main utility of Quillen's theorem is that it gives us access to a concrete model of $\M_{T(J)}$, so that we can determine where to even look for those stalks.
+Our first goal for today is to outline a program that will occupy us for the rest of this Case Study.  Yesterday, we developed a rich target for $E$--homology: sheaves over an algebro-geometric object $\context{E}$.  Furthermore, we have promised a strengthening of Quillen's theorem, \Cref{QuillenSurjective}, which would result in an identification $\context{MU} \simeq \moduli{fg}$, where $\moduli{fg}$ is the ``moduli of formal groups''.  Our initial goal for today is to outline a program by which we can leverage this to study $MU$.  Abstractly, one can hope to study any sheaf, including $\context{MU}(X)$, by analyzing its stalks.  The main utility of Quillen's theorem is that it gives us access to a concrete model of $\context{MU}$, so that we can determine where to even look for those stalks.
 
-With this in mind, given a map \[\Spec R \xrightarrow{f} \moduli{fg},\] life would be easiest if the $R$--module determined by $f^* \M_{T(J)}(X)$ were itself the value of a homology theory $R_*(X) = T(J)_* X \otimes_{T(J)_*} R$.  After all, the pullback of some arbitrary sheaf along some arbitrary map has no special behavior, but homology functors do have familiar special behaviors which we could hope to exploit.  Generally, this is unreasonable to expect: homology theories are functors which convert cofiber sequences of spectra to long exact sequences of groups, but base--change from $\moduli{fg}$ to $\Spec R$ preserves exact sequences exactly when $f$ is \textit{flat}.  In that case, this gives the following theorem:
+With this in mind, given a map \[\Spec R \xrightarrow{f} \moduli{fg},\] life would be easiest if the $R$--module determined by $f^* \context{MU}(X)$ were itself the value of a homology theory $R_*(X) = MU_* X \otimes_{MU_*} R$.  After all, the pullback of some arbitrary sheaf along some arbitrary map has no special behavior, but homology functors do have familiar special behaviors which we could hope to exploit.  Generally, this is unreasonable to expect: homology theories are functors which convert cofiber sequences of spectra to long exact sequences of groups, but base--change from $\moduli{fg}$ to $\Spec R$ preserves exact sequences exactly when $f$ is \textit{flat}.  In that case, this gives the following theorem:
 
-\begin{theorem}[Landweber, part 1]
+\begin{theorem}[Landweber]
 For any diagram
 \begin{center}
 \begin{tikzcd}
-\Spec R \arrow{r}{i} & \moduli{fgl} \arrow[-,double]{r} \arrow{d} & \M_{T(J)}[0] \arrow{d} \arrow[-,double]{r} & \Spec T(J)_* \\
-& \moduli{fg} \arrow[-,double]{r} \arrow[leftarrow]{lu}{\mathrm{flat}} & \M_{T(J)}
+\Spec R \arrow{r}{i} & \moduli{fgl} \arrow[-,double]{r} \arrow{d} & \context{MU}[0] \arrow{d} \arrow[-,double]{r} & \Spec MU_* \\
+& \moduli{fg} \arrow[-,double]{r} \arrow[leftarrow]{lu}{\mathrm{flat}} & \context{MU}
 \end{tikzcd}
 \end{center}
-such that the diagonal arrow is flat, the functor \[R_*(X) := T(J)_*(X) \otimes_{T(J)_*} R\] determines a homology theory. 
+such that the diagonal arrow is flat, the functor \[R_*(X) := MU_*(X) \otimes_{MU_*} R\] determines a homology theory. 
 \end{theorem}
 
 \noindent In the course of proving this theorem, Landweber devised a method to recognize flat maps.  Recall that a map $f$ is flat exactly when for any closed substack $i: A \to \moduli{fg}$ with ideal sheaf $\mathcal I$ there is an exact sequence \[0 \to f^* \mathcal I \to f^* \mathcal O_{\moduli{fg}} \to f^* i_* \mathcal O_A \to 0.\]  Landweber classified the closed substacks of $\moduli{fg}$, thereby giving a method to check maps for flatness.
 
-This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing stalks: the inclusion of a closed substack (and so, in particular, a closed point $\Gamma$) is flat only in highly degenerate cases.  This can be repaired: the inclusion of the formal completion of a closed substack of a Noetherian\footnote{$\moduli{fg}$ is not Noetherian, but we will find that each closed point except $\G_a$ lives in an open substack that happens to be Noetherian.} stack is flat, and so we naturally become interested in the infinitesimal deformation spaces of the closed points $\Gamma$ on $\moduli{fg}$.  If we can analyze those, then Landweber's theorem will produce homology theories called $E_\Gamma$.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover a \emph{homology theory} $K_\Gamma$ which plays the role of computing the stalk of $\M_{T(J)}(X)$ at $\Gamma$.\footnote{Incidentally, this program has no content when applied to $\M_{H\F_2}$, as $\Spec \F_2$ is simply too small.}
+This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing stalks: the inclusion of a closed substack (and so, in particular, a closed point $\Gamma$) is flat only in highly degenerate cases.  This can be repaired: the inclusion of the formal completion of a closed substack of a Noetherian\footnote{$\moduli{fg}$ is not Noetherian, but we will find that each closed point except $\G_a$ lives in an open substack that happens to be Noetherian.} stack is flat, and so we naturally become interested in the infinitesimal deformation spaces of the closed points $\Gamma$ on $\moduli{fg}$.  If we can analyze those, then Landweber's theorem will produce homology theories called $E_\Gamma$.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover a \emph{homology theory} $K_\Gamma$ which plays the role of computing the stalk of $\context{MU}(X)$ at $\Gamma$.\todo{Incidentally, this program has no content when applied to $\context{H\F_2}$, as $\Spec \F_2$ is simply too small.}
+
+We have thus assembled a task list:
+\begin{itemize}
+\item Describe the open and closed substacks of $\moduli{fg}$.
+\item Describe the geometric points of $\moduli{fg}$.
+\item Analyze their infinitesimal deformation spaces.
+\end{itemize}
+This will occupy us for the next two lectures.
 
 -----
 
@@ -278,7 +286,7 @@ Let $BP_*$ be the ring classifying formal group laws with $p$--typical logarithm
 \item It has the form $BP_* \cong \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots]$, where $v_d \equiv p \ell_d \pmod{\text{decomposables}}$.
 \item The unique closed substack of $\moduli{fg} \times \Spec \Z_{(p)}$ of codimension $d$ is selected by $BP_* / (p, v_1, \ldots, v_{d-1})$, and its complementary open substack of dimension $d$ is selected by either of $v_d^{-1} BP_*$ or $v_d^{-1} \Z_{(p)}[v_1, \ldots, v_d]$.\footnote{It's worth pointing out how strange this is. In Euclidean geometry, open subspaces are always top-dimensional, and closed subspaces can drop dimension.}
 \item A $BP_*$--module $M$ gives a flat sheaf on $\moduli{fg}$ exactly when $(p, v_1, v_2, \ldots, v_{d-1}, \ldots)$ is a regular sequence $M$ too.
-\item In particular, $BP_*$ is itself such a module, and so gives rise to a homology theory $BP$ with $\M_{BP} \simeq \moduli{fg} \times \Spec \Z_{(p)}$. \qed
+\item In particular, $BP_*$ is itself such a module, and so gives rise to a homology theory $BP$ with $\context{BP} \simeq \moduli{fg} \times \Spec \Z_{(p)}$. \qed
 \end{enumerate}
 \end{theorem}
 
@@ -351,10 +359,10 @@ Let $M_{2n}(p)$ denote the mod--$p$ Moore spectrum with bottom cell in degree $2
 \noindent In particular, this means that $v$ cannot be nilpotent, since a null-homotopic map induces the zero map in any homology theory.  Just as we took the non-nilpotent endomorphism $p$ in $\pi_0 \End \S$ and coned it off, we can take the endomorphism $v$ in $\pi_{2p-2} \End M_0(p)$ and cone it off to form a new spectrum called $V(1)$.\footnote{$V(1)$ actually means a finite spectrum with $BP_* V(1) \cong BP_* / (p, v_1)$. At $p = 2$ this spectrum doesn't exist and this is a misnomer.}\todo{Lee Nave shows that $V((p+1)/1)$ doesn't exist. That's nice.}  Ravenel's burning question was whether the pattern continues: does $V(1)$ have a non-nilpotent self-map, and can we cone it off to form a new such spectrum with a new such map?  Can we then do that again, indefinitely?  In order to study this question, we are motivated to find spectra $E$ as above --- and in fact, we found one yesterday.
 
 \begin{theorem}[Devinatz--Hopkins--Smith, hard]
-The spectrum $T(J)$ detects nilpotence.
+Complex cobordism $MU$ detects nilpotence.
 \end{theorem}
 
-They also show that the $T(J)$ is the universal object which detects nilpotence, in the sense that any other ring spectrum can have this property checked stalkwise on $\M_{T(J)}$:
+They also show that the $MU$ is the universal object which detects nilpotence, in the sense that any other ring spectrum can have this property checked stalkwise on $\context{MU}$:
 
 \begin{theorem}[Hopkins--Smith, easy]
 A ring spectrum $E$ detects nilpotence if and only if $K(d)_* E \ne 0$ for all $0 \le d \le \infty$ and for all primes $p$.
@@ -362,9 +370,9 @@ A ring spectrum $E$ detects nilpotence if and only if $K(d)_* E \ne 0$ for all $
 \begin{proof}
 If $K(d)_* E = 0$ for some $d$, then the non-nilpotent map $\S \to K(d)$ lies in the kernel of the Hurewicz homomorphism for $E$, so $E$ fails to detect nilpotence.
 
-Hence, for any $d$ we must have $K(d)_* E \ne 0$.  Because $K(d)_*$ is a field, it follows by picking a basis of $K(d)_* E$ that $K(d) \sm E$ is a nonempty wedge of suspensions of $K(d)$.  So, for $\alpha \in \pi_* R$, if $E_* \alpha = 0$ then $(K(d) \sm E)_* \alpha = 0$ and hence $K(d)_* \alpha = 0$.  So, we need to show that if $K(d)_* \alpha = 0$ for all $n$ and all $p$ then $\alpha$ is nilpotent.  Taking Devinatz--Hopkins--Smith as given, it would suffice to show merely that $T(J)_* \alpha$ is nilpotent.  This is equivalent to showing that the ring spectrum $T(J) \sm R[\alpha^{-1}]$ is contractible or that the unit map is null: \[\S \to T(J) \sm R[\alpha^{-1}].\]
+Hence, for any $d$ we must have $K(d)_* E \ne 0$.  Because $K(d)_*$ is a field, it follows by picking a basis of $K(d)_* E$ that $K(d) \sm E$ is a nonempty wedge of suspensions of $K(d)$.  So, for $\alpha \in \pi_* R$, if $E_* \alpha = 0$ then $(K(d) \sm E)_* \alpha = 0$ and hence $K(d)_* \alpha = 0$.  So, we need to show that if $K(d)_* \alpha = 0$ for all $n$ and all $p$ then $\alpha$ is nilpotent.  Taking Devinatz--Hopkins--Smith as given, it would suffice to show merely that $MU_* \alpha$ is nilpotent.  This is equivalent to showing that the ring spectrum $MU \sm R[\alpha^{-1}]$ is contractible or that the unit map is null: \[\S \to MU \sm R[\alpha^{-1}].\]
 
-Pick a prime $p$ and recall the regular sequence of Landweber's theorem.  We define a spectrum $P(d+1)$ to be the regular quotient of $BP$ by $(p, v_1, \ldots, v_d)$.  A nontrivial result of Johnson and Wilson shows that if $T(J)_* X = 0$ for any $X$, then for any $d$ we have $K([0, d])_* X = 0$ and $P(d+1)_* X = 0$.\footnote{It is immediate that $T(J)_* X = 0$ forces $P(d+1)_* X = 0$ and $v_{d'}^{-1} P(d')_*(X) = 0$ for all $d' < d$.  What's nontrivial is showing that $v_{d'}^{-1} P(d')_*(X) = 0$ if and only if $K(d')_*(X) = 0$.}  Taking $X = R[\alpha^{-1}]$, have assumed all of these are zero except for $P(d+1)$.  But $\colim_d P(d+1) \simeq H\F_p \simeq K(\infty)$, and $\S \to K(\infty) \sm R[\alpha^{-1}]$ is assumed to be null as well.  By compactness of $\S$, that null-homotopy factors through some finite stage $P(d+1) \sm R[\alpha]$ with $d \gg 0$.
+Pick a prime $p$ and recall the regular sequence of Landweber's theorem.  We define a spectrum $P(d+1)$ to be the regular quotient of $BP$ by $(p, v_1, \ldots, v_d)$.  A nontrivial result of Johnson and Wilson shows that if $MU_* X = 0$ for any $X$, then for any $d$ we have $K([0, d])_* X = 0$ and $P(d+1)_* X = 0$.\footnote{It is immediate that $MU_* X = 0$ forces $P(d+1)_* X = 0$ and $v_{d'}^{-1} P(d')_*(X) = 0$ for all $d' < d$.  What's nontrivial is showing that $v_{d'}^{-1} P(d')_*(X) = 0$ if and only if $K(d')_*(X) = 0$.}  Taking $X = R[\alpha^{-1}]$, have assumed all of these are zero except for $P(d+1)$.  But $\colim_d P(d+1) \simeq H\F_p \simeq K(\infty)$, and $\S \to K(\infty) \sm R[\alpha^{-1}]$ is assumed to be null as well.  By compactness of $\S$, that null-homotopy factors through some finite stage $P(d+1) \sm R[\alpha]$ with $d \gg 0$.
 \end{proof}
 
 As another example of the primacy of these methods, we can show the following interesting result.  Say that $R$ is a field spectrum when every $R$--module (in the homotopy category) splits as a wedge of suspensions of $R$.  It is easy to check (as mentioned in the proof above) that $K(d)$ is an example of such a spectrum.
@@ -446,7 +454,7 @@ The Balmer spectrum of $\CatOf{Spectra}_{(p)}^{\mathrm{fin}}$ consists of the th
 Using the characterization of $\CatOf C_d$ as the kernel of $K(d-1)_*$, we see that it is a prime $\otimes$--ideal: \[K(d-1)_*(X \sm Y) \cong K(d-1)_* X \otimes_{K(d-1)_*} K(d-1)_* Y\] is zero exactly when at least one of $X$ and $Y$ is $K(d-1)$--acyclic.
 \end{proof}
 
-In fact, our favorite functor\footnote{However, this functor is \emph{not} a map of triangulated categories, so this has to be interpreted lightly.} $T(J)_*: \CatOf{Spectra} \to \CatOf{QCoh}(\M_{T(J)})$ induces a homeomorphism of the Balmer spectrum of $\CatOf{Spectra}^{\mathrm{fin}}$ to that of $\moduli{fg}$.
+In fact, our favorite functor\footnote{However, this functor is \emph{not} a map of triangulated categories, so this has to be interpreted lightly.} $MU_*: \CatOf{Spectra} \to \CatOf{QCoh}(\context{MU})$ induces a homeomorphism of the Balmer spectrum of $\CatOf{Spectra}^{\mathrm{fin}}$ to that of $\moduli{fg}$.
 
 
 
@@ -462,14 +470,14 @@ Proof of chromatic fracture
 Calculation of $\pi_* L_{K(1)} \S$?
 
 
-However, Balmer's construction gives only a topological space, and not anything like a locally ringed space (or a space otherwise equipped locally with algebraic data).\footnote{We will address this in our situation, but in general this is an open question: given a ring spectrum $R$, how can one recognize these local categories of spectra in terms of $R$, without reference to auxiliary spectra like $T(J)$?  Or, just as importantly: what makes $T(J)$ a special $\S$--algebra?}  Recalling Landweber's theorem from yesterday, Bousfield's theory of homological localization allows us to extend it as follows:
+However, Balmer's construction gives only a topological space, and not anything like a locally ringed space (or a space otherwise equipped locally with algebraic data).\footnote{We will address this in our situation, but in general this is an open question: given a ring spectrum $R$, how can one recognize these local categories of spectra in terms of $R$, without reference to auxiliary spectra like $MU$?  Or, just as importantly: what makes $MU$ a special $\S$--algebra?}  Recalling Landweber's theorem from yesterday, Bousfield's theory of homological localization allows us to extend it as follows:
 
 \begin{theorem}[Bousfield]
 Let $R_*$ denote the homology theory associated to a flat map $j: \Spec R \to \moduli{fg}$ by Landweber's theorem.  There is then a diagram\footnote{The meat of this theorem is in overcoming set-theoretic difficulties in the construction of $\CatOf{Spectra}_R$.  Bousfield accomplished this by describing a model structure on $\CatOf{Spectra}$ for which $R$--equivalences create the weak--equivalences.}
 \begin{center}
 \begin{tikzcd}[column sep=2.2cm,row sep=2cm]
 \CatOf{Spectra}_R \arrow[red]{r}{R_* \quad \mathrm{conservative}} \arrow[leftarrow, shift left=0.20cm, red]{d}{L_R} & \CatOf{QCoh}(\Spec R) \arrow[shift left=0.20cm, red, leftarrow]{d}{j^*} \\
-\CatOf{Spectra} \arrow[leftarrow,shift left=0.20cm, "\dashv"']{u}{i} \arrow[red]{ru}{R_*} \arrow[red]{r}{T(J)_*} & \CatOf{QCoh}(\M_{T(J)}), \arrow[leftarrow, shift left=0.20cm, "\dashv"']{u}{j_*}
+\CatOf{Spectra} \arrow[leftarrow,shift left=0.20cm, "\dashv"']{u}{i} \arrow[red]{ru}{R_*} \arrow[red]{r}{MU_*} & \CatOf{QCoh}(\context{MU}), \arrow[leftarrow, shift left=0.20cm, "\dashv"']{u}{j_*}
 \end{tikzcd}
 \end{center}
 such that $i$ is left-adjoint to $L_R$, $j^*$ is left-adjoint to $j_*$, $i$ and $j_*$ are inclusions of full subcategories, the red composites are all equal, and $R_*$ is conservative on $\CatOf{Spectra}_R$.
@@ -500,13 +508,13 @@ There are also considerably more complicated facts known about these functors:
 The homotopy limit of the tower \[\cdots \to L_d F \to L_{d-1} F \to \cdots \to L_1 F \to L_0 F\] recovers the $p$--local homotopy type of any finite spectrum $F$.\footnote{Spectra satisfying this limit property are said to be \textit{chromatically complete}, which is closely related to being \textit{harmonic}, i.e., being local with respect to $\bigvee_{d=0}^\infty K(d)$.  (I believe this a joke about ``music of the spheres''.)  It is known that nice Thom spectra (and in particular every suspension and finite spectrum) is harmonic, that every finite spectrum is chromatically complete, and that there exist some harmonic spectra which are not chromatically complete.}
 \end{theorem}
 
-\noindent This suggests a productive method for analyzing the homotopy groups of spheres: study the homotopy groups of each $L_d \S$ and perform the reassembly process encoded by this inverse limit.  Using the fracture square, one sees that it is also profitable to consider the homotopy groups of $\widehat L_d \S$.  In fact, the spectral version of $\M_E(F)$ considered on the first day furnishes us with a tool by which we can approach this:
+\noindent This suggests a productive method for analyzing the homotopy groups of spheres: study the homotopy groups of each $L_d \S$ and perform the reassembly process encoded by this inverse limit.  Using the fracture square, one sees that it is also profitable to consider the homotopy groups of $\widehat L_d \S$.  In fact, the spectral version of $\context{E}(F)$ considered on the first day furnishes us with a tool by which we can approach this:
 
 \begin{theorem}[Bousfield, et al.]
-The coskeletal filtration of $\mathcal D_E(F)$ gives a spectral sequence converging to the homotopy of its totalization, $F^\wedge_E$.\footnote{There is a subtlety here: the object $\mathcal D_E(F)$ must be able to be formed as a homotopy coherent diagram in order to produce the totalization. Essentially, this forces $E$ to be an $A_\infty$--ring spectrum. This holds for all the examples of ring spectra we have discussed.}  When $F$ is finite and $E$ models either of the cases above, this spectral sequence converges to $\pi_* L_E F$.  Furthermore, there is a line bundle $\omega$ on $\M_E$ such that\footnote{The identification of the $E_2$--page as computing stack cohomology is the first place where we really mean to employ the full technology of stacks in this talk.  Everywhere else, we have been essentially content to speak of simplicial presheaves.} \[E_2^{*, *} = H^*_{\mathrm{stack}}(\M_E; \M_E(F) \otimes \omega^{\otimes *}) \Rightarrow \pi_* L_E F.\]
+The coskeletal filtration of $\mathcal D_E(F)$ gives a spectral sequence converging to the homotopy of its totalization, $F^\wedge_E$.\footnote{There is a subtlety here: the object $\mathcal D_E(F)$ must be able to be formed as a homotopy coherent diagram in order to produce the totalization. Essentially, this forces $E$ to be an $A_\infty$--ring spectrum. This holds for all the examples of ring spectra we have discussed.}  When $F$ is finite and $E$ models either of the cases above, this spectral sequence converges to $\pi_* L_E F$.  Furthermore, there is a line bundle $\omega$ on $\context{E}$ such that\footnote{The identification of the $E_2$--page as computing stack cohomology is the first place where we really mean to employ the full technology of stacks in this talk.  Everywhere else, we have been essentially content to speak of simplicial presheaves.} \[E_2^{*, *} = H^*_{\mathrm{stack}}(\context{E}; \context{E}(F) \otimes \omega^{\otimes *}) \Rightarrow \pi_* L_E F.\]
 \end{theorem}
 
-The utility of this theorem is in the identification with stack cohomology.  In the case $E = E_{\Gamma_d}$, recall that $\M_{E_{\Gamma_d}}[0]$ is a smooth infinitesimal thickening of the spectrum of a field, so that \[\M_{E_{\Gamma_d}} = \left( \moduli{fg} \right)^\wedge_{\Gamma_d} \simeq \widehat{\mathbb A}^{d-1}_{\mathbb W(k)} \mmod \underline{\operatorname{Aut}}(\Gamma_d)\] as in the first example of $E = H\F_2$ on the first day.  But, in this specific case, there is an identification of stack cohomology with group cohomology: \[H^*_{\mathrm{stack}}(* \mmod \underline{G}; \mathcal M) = H^*_{\mathrm{group}}(G; M).\]  Another theorem from the arithmetic geometry literature gives \[\operatorname{Aut}(\Gamma_d) \cong \left( \mathbb{W}(k)\langle S \rangle \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right)^\times,\] and so we have reduced the computation of all of the stable homotopy groups of spheres to a very difficult problem in profinite group cohomology --- but one which is arithmetically founded, so that arithmetic geometry might continue to lend a hand.
+The utility of this theorem is in the identification with stack cohomology.  In the case $E = E_{\Gamma_d}$, recall that $\context{E_{\Gamma_d}}[0]$ is a smooth infinitesimal thickening of the spectrum of a field, so that \[\context{E_{\Gamma_d}} = \left( \moduli{fg} \right)^\wedge_{\Gamma_d} \simeq \widehat{\mathbb A}^{d-1}_{\mathbb W(k)} \mmod \underline{\operatorname{Aut}}(\Gamma_d)\] as in the first example of $E = H\F_2$ on the first day.  But, in this specific case, there is an identification of stack cohomology with group cohomology: \[H^*_{\mathrm{stack}}(* \mmod \underline{G}; \mathcal M) = H^*_{\mathrm{group}}(G; M).\]  Another theorem from the arithmetic geometry literature gives \[\operatorname{Aut}(\Gamma_d) \cong \left( \mathbb{W}(k)\langle S \rangle \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right)^\times,\] and so we have reduced the computation of all of the stable homotopy groups of spheres to a very difficult problem in profinite group cohomology --- but one which is arithmetically founded, so that arithmetic geometry might continue to lend a hand.
 
 \begin{example}[Adams]
 In the case $d = 1$, $\operatorname{Aut}(\Gamma_1) = \Z_p^\times$ and it acts on $\pi_* E_1 = \Z_p[u^\pm]$ by $\gamma \cdot u^n \mapsto \gamma^n u^n$.  At odd primes $p$ (so that $p$ is coprime to the torsion part of $\Z_p^\times$), one computes \[H^s(\operatorname{Aut}(\Gamma_1); \pi_* E_1) = \begin{cases}\Z_p & \text{when $s = 0$}, \\ \bigoplus_{j = 2(p-1)k} \Z_p\{u^j\} / (pk u^j) & \text{when $s = 1$}, \\ 0 & \text{otherwise}. \end{cases}\]  This, in turn, gives the calculation \[\pi_t \widehat L_1 \S^0 = \begin{cases} \Z_p & \text{when $t = 0$}, \\ \Z_p / (pk) & \text{when $t = t|v_1| - 1$}, \\ 0 & \text{otherwise}. \end{cases}\]  These groups are familiar to homotopy theorists: the $J$--homomorphism $J: BU \to BF$ described on the first day selects exactly these elements (for nonnegative $t$).
