notes for later digestion for Chapter 4

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -132,6 +132,8 @@ Lukas's main suggestion was to consider how the shriek functors were computed in
 
 Talk about how $\S \to E$ is being treated like a cover. If you have two covers, you can take their joint cover $\S \to E \vee F$, whose $1$--simplices pick up a mixed term: \[(E \vee F) \sm (E \vee F) \simeq E^{\sm 2} \vee F^{\sm 2} \vee (E \sm F)^{\vee 2}.\]  This mixed term prevents double-counting, and it makes it sort of reasonable that it should involve isomorphisms between mixed formal group types.  (This mixed cooperations perspective might have to wait until the chapter on unstable contexts.)
 
+I'm fairly certain that the monad associated to the unstable composite adjunction is monoidal.  It show immediately follow that the unstable $E$--homology descent object gives a quasicoherent sheaf over the unstable $E$--homology context formed by taking the unstable $E$--homologies of all of the spheres\ldots
+
 
 
 
@@ -167,6 +169,12 @@ The de Rham crystal of a formal group
 Goerss's result on $H_* \OS{E}{*}$ for Landweber flat $E$
 
 \todo{Dieudonn\'e theory is also about taking primitives in some sort of cohomology.  Can this be connected to the additivity condition on unstable operations?}
+
+
+Goerss also talks about ``Hopf ring hom'', and how, since many of the Hopf rings appearing in algebraic topology are ``free'', Hopf ring hom off of them agrees with just Hopf algebra hom (or Dieudonne module hom) off of their generating object.  That's probably worth pointing out, since nonadditive unstable operations seem so unwieldy.
+
+
+
 
 
 
