--- a/finite.tex
+++ b/finite.tex
@@ -23,7 +23,7 @@ Our answer to this question will come out of considering Grothendieck's framewor
 \begin{itemize}
 \item (Naive:) When is there a module $M$ such that $N \cong M \otimes_R S$?
 \item (Nuanced:) What extra data can be placed on $N$, called \textit{descent data}, so that the category of descent data for $N$ is equivalent to the category of preimages of $N$ along $f_*$?
-\item (Needy:) What conditions can be placed on $f$ so that the category of descent data for any given module is always contractible?
+\item (Needy:) What conditions can be placed on $f$ so that the category of descent data for any given module is always contractible?\todo{Change these silly N phrases.}
 \end{itemize}
 The essential structure of these answers is easy to guess if we proceed by example: suppose that we begin instead with an $R$--module $M$ and we set $N = M \otimes_R S$.  We can 
 
@@ -121,6 +121,7 @@ flatness hypothesis
 Take $E_* E$ to be an $E_*$--module using the left-unit map.  We will say that $E$ satisfies \FH, the \textbf Flatness \textbf Hypothesis, when the right-unit map $E_* \to E_* E$ is a flat map of $E_*$--modules.\todo{Explain {\FH} in terms of a Kunneth spectral sequence.}
 \end{definition}
 
+Give examples: $H\F_2$, for instance.
 
 
 
@@ -586,7 +587,7 @@ The homotopy limit of the tower \[\cdots \to L_d F \to L_{d-1} F \to \cdots \to 
 \noindent This suggests a productive method for analyzing the homotopy groups of spheres: study the homotopy groups of each $L_d \S$ and perform the reassembly process encoded by this inverse limit.  Using the fracture square, one sees that it is also profitable to consider the homotopy groups of $\widehat L_d \S$.  In fact, the spectral version of $\context{E}(F)$ considered on the first day furnishes us with a tool by which we can approach this:
 
 \begin{theorem}[Bousfield, et al.]
-The coskeletal filtration of $\mathcal D_E(F)$ gives a spectral sequence converging to the homotopy of its totalization, $F^\wedge_E$.\footnote{There is a subtlety here: the object $\mathcal D_E(F)$ must be able to be formed as a homotopy coherent diagram in order to produce the totalization. Essentially, this forces $E$ to be an $A_\infty$--ring spectrum. This holds for all the examples of ring spectra we have discussed.}  When $F$ is finite and $E$ models either of the cases above, this spectral sequence converges to $\pi_* L_E F$.  Furthermore, there is a line bundle $\omega$ on $\context{E}$ such that\footnote{The identification of the $E_2$--page as computing stack cohomology is the first place where we really mean to employ the full technology of stacks in this talk.  Everywhere else, we have been essentially content to speak of simplicial presheaves.} \[E_2^{*, *} = H^*_{\mathrm{stack}}(\context{E}; \context{E}(F) \otimes \omega^{\otimes *}) \Rightarrow \pi_* L_E F.\]
+The coskeletal filtration of $\mathcal D_E(F)$ gives a spectral sequence converging to the homotopy of its totalization, $F^\wedge_E$.  When $F$ is finite and $E$ models either of the cases above, this spectral sequence converges to $\pi_* L_E F$.  Furthermore, there is a line bundle $\omega$ on $\context{E}$ such that\footnote{The identification of the $E_2$--page as computing stack cohomology is the first place where we really mean to employ the full technology of stacks in this talk.  Everywhere else, we have been essentially content to speak of simplicial presheaves.} \[E_2^{*, *} = H^*_{\mathrm{stack}}(\context{E}; \context{E}(F) \otimes \omega^{\otimes *}) \Rightarrow \pi_* L_E F.\]
 \end{theorem}
 
 The utility of this theorem is in the identification with stack cohomology.  In the case $E = E_{\Gamma_d}$, recall that $\context{E_{\Gamma_d}}[0]$ is a smooth infinitesimal thickening of the spectrum of a field, so that \[\context{E_{\Gamma_d}} = \left( \moduli{fg} \right)^\wedge_{\Gamma_d} \simeq \widehat{\mathbb A}^{d-1}_{\mathbb W(k)} \mmod \underline{\operatorname{Aut}}(\Gamma_d)\] as in the first example of $E = H\F_2$ on the first day.  But, in this specific case, there is an identification of stack cohomology with group cohomology: \[H^*_{\mathrm{stack}}(* \mmod \underline{G}; \mathcal M) = H^*_{\mathrm{group}}(G; M).\]  Another theorem from the arithmetic geometry literature gives \[\operatorname{Aut}(\Gamma_d) \cong \left( \mathbb{W}(k)\langle S \rangle \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right)^\times,\] and so we have reduced the computation of all of the stable homotopy groups of spheres to a very difficult problem in profinite group cohomology --- but one which is arithmetically founded, so that arithmetic geometry might continue to lend a hand.
