remove the date from the title page

--- a/main.tex
+++ b/main.tex
@@ -141,6 +141,7 @@
 
 \title{Formal Geometry in Algebraic Topology \\ \vspace{0.5\baselineskip} \small{Lecture notes}}
 \author{Eric Peterson}
+\date{}
 
 \newcounter{whichdate}
 \setcounter{whichdate}{0}
