--- a/class-info.tex
+++ b/class-info.tex
@@ -5,13 +5,13 @@
 \vspace{2\baselineskip} \noindent \textit{Course ID: }
 MATH 278 (159627).
 
-\vspace{2\baselineskip} \noindent \textit{Meeting times: }
+\vspace{\baselineskip} \noindent \textit{Meeting times: }
 Spring 2016, MWF 12pm--1pm.
 
-\vspace{2\baselineskip} \noindent \textit{Goals: }
+\vspace{\baselineskip} \noindent \textit{Goals: }
 The primary goal of this class is to teach students to view results in algebraic topology through the lens of (formal) algebraic geometry.
 
-\vspace{2\baselineskip} \noindent \textit{Grading: }
+\vspace{\baselineskip} \noindent \textit{Grading: }
 This class won't have any official assignments. I'll give references as readings for those who would like a deeper understanding, though I'll do my best to ensure that no extra reading is required to follow the arc of the class.
 
 I do want to assemble course notes from this class, but it's unlikely that I will have time to type \emph{all} of them up. Instead, I would like to ``crowdsource'' this somewhat: I'll type up skeletal notes for each lecture, and then we as a class will try to flesh them out as the semester progresses. As incentive to help, those who contribute to the document will have their name included in the acknowledgements, and those who contribute \emph{substantially} will have their name added as a coauthor. Everyone could use more CV items. (Publication may take a while. I suspect the course won't run perfectly smoothly the first time, so this may takes a second semester pass to become fully workable. But, since topics courses only come around once in a while, this will necessarily mean a delay.)
@@ -25,3 +25,5 @@ If you're taking the class or otherwise want to contribute, you can write me at
 \texttt{ecp@math.harvard.edu}
 \end{center}
 to request write access.
+
+This document was compiled on \today. This may not reflect when it was cloned from git, though.
