some remarks on where to find the algebraic geometry stuff in Chapter 5

--- a/sigma.tex
+++ b/sigma.tex
@@ -17,11 +17,13 @@
 
 \section{Elliptic curves and $\theta$--functions}
 
-The theorem of the cube
+Section--preserving maps of abelian schemes are automatically homomorphisms: Olsson's Prop 1.11.
+
+The theorem of the cube: $\Theta^3 \L$ is canonically trivial for any rigidified line bundle $\L$ on an abelian scheme $A$.  You can find this in Olsson Thm 2.2.  Or, Akhil Mathew has notes from an algebraic geometry class ( https://math.berkeley.edu/{\textasciitilde}amathew/232b.pdf ) where lectures 3--5 address the theorem of the cube.
 
 $\Theta$--structures and symmetric biextensions
 
-Weil pairings
+Weil pairings: checks how far some extension is from being commutative. You can see this in Olsson 3.11 or Mumford's \textit{Abelian varieties} p.\ 222.
 
 
 
