make note of a couple of blog post references

--- a/intro.tex
+++ b/intro.tex
@@ -66,3 +66,5 @@ For $E$ an even--periodic cohomology theory, \[\Spec E_* MU[6, \infty) \cong C^3
 \noindent Our real goal is to understand theorems like these.  The structure of the class will be, more or less, to work through a sequence of case studies where this perspective on algebraic topology shines through most brightly.  We'll start by working through Thom's calculation of the homotopy of $MO$, which simultaneously holds the attractive features of being free of technical complexity while revealing essentially all of the structural complexity.  Having seen that through to the end, we'll then work on reinforcing our technical underpinnings, and then we'll venture on to other examples.  The overriding theme of the class will be that this is a good organizing principle that gives us one avenue of insight into how homotopy theory functions.
 
 \todo{Talk about existing resources here.  Be sure to mention Strickland's FSFG.}
+
+\todo[inline]{Akhil wrote a couple of blog posts about Ochanine's theorem: \texttt{https://amathew.wordpress.com/2012/05/30/ochanines-theorem-on-elliptic-genera/} and \texttt{https://amathew.wordpress.com/2012/05/31/the-other-direction-of-ochaines-theorem/}. Mentioning a more precise result might lend to a more beefy introduction.}
