add jeremy hahn to the acknowledgements (and restructure their calling order)

--- a/preface.tex
+++ b/preface.tex
@@ -1,5 +1,9 @@
 % -*- root: main.tex -*-
 
+\input{class-info}
+
+\newpage
+
 \subsection*{Acknowledgements}
 
 Matthew Ando, Michael Hopkins, Neil Strickland, Constantin Teleman
@@ -16,6 +20,6 @@ Hisham Sati: the \textit{Flavors of Cohomology} workshop
 
 Berkeley students: Hood Chatham and Geoffrey Lee, Catherine Ray
 
-Course participants: XiaoLin (Danny) Shi, Lukas Brantner
+Course participants: Lukas Brantner, Jeremy Hahn, XiaoLin (Danny) Shi
 
 Other readers: Jon Beardsley, Kevin Wray
