add a couple of contact points for basic facts about theta-functions, esp in the elliptic curve case

--- a/sigma.tex
+++ b/sigma.tex
@@ -17,6 +17,15 @@
 
 \section{Elliptic curves and $\theta$--functions}
 
+Every elliptic curve is projective
+
+Every abelian variety is projective (Theorem 7.1 of Milne's \textit{Abelian varieties (short)})
+
+Elliptic $\theta$--functions: every elliptic curve embeds into the \emph{same} projective space
+
+$\Theta$--structures and $\theta$--functions for general abelian varieties: continuously embedding the universal continuous family of abelian varieties into a single projective space.
+
+
 Section--preserving maps of abelian schemes are automatically homomorphisms: Olsson's Prop 1.11.
 
 The theorem of the cube: $\Theta^3 \L$ is canonically trivial for any rigidified line bundle $\L$ on an abelian scheme $A$.  You can find this in Olsson Thm 2.2.  Or, Akhil Mathew has notes from an algebraic geometry class ( https://math.berkeley.edu/{\textasciitilde}amathew/232b.pdf ) where lectures 3--5 address the theorem of the cube.
@@ -24,6 +33,8 @@ The theorem of the cube: $\Theta^3 \L$ is canonically trivial for any rigidified
 $\Theta$--structures and symmetric biextensions
 
 Weil pairings: checks how far some extension is from being commutative. You can see this in Olsson 3.11 or Mumford's \textit{Abelian varieties} p.\ 222.
+
+
 
 
 
