a couple closing remarks for the ay about the structure of Chapter 5

--- a/sigma.tex
+++ b/sigma.tex
@@ -5,6 +5,8 @@
 
 \todo[inline]{Write an introduction for me.  Use unstable cooperations from Morava's theories to classical complex and real $K$--theory.}
 
+\todo[inline]{Part of the theme of this chapter should be to use the homomorphism from topological vector bundles to algebraic line bundles --- Neil's $\mathbb L$ construction --- as inspiration for what to do, given suitable algebraic background.}
+
 
 
 
@@ -60,6 +62,8 @@ Every abelian variety is projective (Theorem 7.1 of Milne's \textit{Abelian vari
 Elliptic $\theta$--functions: every elliptic curve embeds into the \emph{same} projective space
 
 $\Theta$--structures and $\theta$--functions for general abelian varieties: continuously embedding the universal continuous family of abelian varieties into a single projective space.
+
+Corollary 7.2 of Milne's chapter is that every abelian variety has a \emph{symmetric} ample invertible sheaf.  (Remarks after that say that any ample sheaf becomes very ample after cubing it. That's really what the theorem of the cube's use in the above proof is saying.)
 
 
 Section--preserving maps of abelian schemes are automatically homomorphisms: Olsson's Prop 1.11.
