adds what AHS has to say about computing how sigma maps to K_Tate, which is pretty easy reading

--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,7 @@
 \renewcommand{\O}{\mathcal O}
 \renewcommand{\t}{\mathbf t}
 \newcommand{\Gm}{\mathbb G_m}
+\newcommand{\h}{\mathfrak h}
 
 \newcommand{\<}{\langle}
 \renewcommand{\>}{\rangle}
