removes I and II from the Structure of M_fg lecture titles

--- a/finite.tex
+++ b/finite.tex
@@ -170,7 +170,7 @@ I think you can make sense of ``Cartesian'' directly on $\sheaf D_E(X)$, and tha
 
 
 
-\section{The structure of $\moduli{fg}$ I: Large scales}
+\section{The structure of $\moduli{fg}$: Large scales}
 
 Our first goal for today is to outline a program that will occupy us for the rest of this Case Study.  Yesterday, we developed a rich target for $E$--homology: sheaves over an algebro-geometric object $\context{E}$.  Furthermore, we have promised a strengthening of Quillen's theorem, \Cref{QuillenSurjective}, which would result in an identification $\context{MU} \simeq \moduli{fg}$, where $\moduli{fg}$ is the ``moduli of formal groups''.  Our initial goal for today is to outline a program by which we can leverage this to study $MU$.  Abstractly, one can hope to study any sheaf, including $\context{MU}(X)$, by analyzing its stalks.  The main utility of Quillen's theorem is that it gives us access to a concrete model of $\context{MU}$, so that we can determine where to even look for those stalks.
 
@@ -335,7 +335,7 @@ Let $BP_*$ be the ring classifying formal group laws with $p$--typical logarithm
 
 
 
-\section{The structure of $\moduli{fg}$ II: Small scales}
+\section{The structure of $\moduli{fg}$: Small scales}
 
 In this lecture:
 
